Fixed overflow problem I was having during rotation

--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
   font-family: "Roboto", sans-serif;
   height: 100vh;
   width: 100%;
-  overflow: hidden;
   margin: 0;
   padding: 0;
 }
